# bus-desktop-game

./: CMakeLists.txt  README.md  main.cpp
.claude/: settings.local.json
assets/fonts/: LEIA-ME.txt
assets/icons/: LEIA-ME.txt
levels/: level_001.json  level_002.json  level_003.json  level_004.json  level_005.json  level_006.json  level_007.json  level_008.json  level_009.json  level_010.json
qml/: main.qml
qml/components/: BoardView.qml  BusItem.qml  HUD.qml  PlatformView.qml
qml/screens/: GameScreen.qml  LevelSelectScreen.qml
qml/style/: Sizes.qml  qmldir
src/common/: Enums.h
src/engine/: BoardEngine.cpp  BoardEngine.h  BusListModel.cpp  BusListModel.h  GameController.cpp  GameController.h  MovementSolver.cpp  MovementSolver.h  PassengerListModel.cpp  PassengerListModel.h  PlatformListModel.cpp  PlatformListModel.h
src/model/: Board.cpp  Board.h  Bus.cpp  Bus.h  Passenger.cpp  Passenger.h  Platform.cpp  Platform.h
src/persistence/: LevelLoader.cpp  LevelLoader.h  LevelManager.cpp  LevelManager.h  PersistenceManager.cpp  PersistenceManager.h
tests/: tst_BoardEngine.cpp  tst_LevelLoader.cpp  tst_MovementSolver.cpp
